# uteki

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  DEPLOY.md  Makefile  README.md  THIRD_PARTY_NOTICES.md  cloudbuild.yaml  package.json  pnpm-lock.yaml
docs/: api.md  (+3 more)
services/api/: .env.example  Dockerfile  MIGRATION_PG.md  README.md  pyproject.toml
services/api/scripts/: ingest_company_news.py  ingest_ir_press.py  ingest_sec.py  migrate_news_from_uteki_open.py  seed_companies.py  seed_earnings.py  seed_news_demo.py  seed_triggers.py
services/api/src/uteki_api/: main.py
services/api/src/uteki_api/agents/: base.py  harness.py  research.py
services/api/src/uteki_api/api/: admin.py  agent.py  agents.py  artifacts.py  auth.py  companies.py  compare.py  earnings.py  eval.py  health.py  news.py  runs.py  symbols.py  tag_groups.py  triggers.py
services/api/src/uteki_api/artifacts/: __init__.py  gcs_store.py  models.py  store.py
services/api/src/uteki_api/auth/: __init__.py  deps.py  jwt.py  roles.py
services/api/src/uteki_api/auth/oauth/: __init__.py  common.py  github.py  google.py
services/api/src/uteki_api/cli/: __init__.py  proposals.py
services/api/src/uteki_api/companies/: __init__.py  models.py  store.py
services/api/src/uteki_api/core/: config.py  db.py  logging.py
services/api/src/uteki_api/diagnosis/: __init__.py  trace.py
services/api/src/uteki_api/earnings/: __init__.py  models.py  store.py
services/api/src/uteki_api/eval/: __init__.py  bench_models.py  bench_store.py  drift_monitor.py  market_price.py  prediction_dispatcher.py  prediction_models.py  prediction_store.py  runner.py  store.py
services/api/src/uteki_api/eval/cases/: earnings-mock-call.json  research-pipeline-end-to-end.json  research-sector-primer.json  sample.json
services/api/src/uteki_api/eval/judges/: __init__.py  cite_compliance.md  correctness.md  cost.py  coverage.md  dispatcher.py  outcome.md  runner.py  style.md
services/api/src/uteki_api/evolution/: __init__.py  ab_eval.py  apply.py  cc_runner.py  g2.py  store.py  validators.py  versions.py
services/api/src/uteki_api/evolution/proposals/: __init__.py  models.py  store.py
services/api/src/uteki_api/llm/: anthropic_client.py  client.py  router.py  usage.py
services/api/src/uteki_api/mcp/: __init__.py  __main__.py  client.py  server.py
services/api/src/uteki_api/memory/: __init__.py  base.py  in_memory.py
services/api/src/uteki_api/news/: __init__.py  models.py  store.py
services/api/src/uteki_api/news_sources/: __init__.py  google_news.py  ir_rss.py  sec_edgar.py  yahoo_finance.py
services/api/src/uteki_api/provenance/: __init__.py  catalog.py  citation_parser.py  datapoint.py  sources.py
services/api/src/uteki_api/runs/: __init__.py  feedback_models.py  feedback_store.py  models.py  sql_models.py  store.py
services/api/src/uteki_api/schemas/: chat.py  events.py
services/api/src/uteki_api/skills/: __init__.py  loader.py  qna.py  recap.py  registry.py  screener.py
services/api/src/uteki_api/skills/_shared/: addendum_zh.md  guardrails.md
services/api/src/uteki_api/skills/company/: __init__.py
services/api/src/uteki_api/skills/earnings/: SKILL.md  __init__.py
services/api/src/uteki_api/skills/evaluator/: SKILL.md  __init__.py  verifiers.py
services/api/src/uteki_api/skills/pipelines/: __init__.py  research_pipeline.py
services/api/src/uteki_api/skills/planner/: SKILL.md  __init__.py
services/api/src/uteki_api/skills/research/: SKILL.md  __init__.py
services/api/src/uteki_api/skills/uteki/: SKILL.md  __init__.py
services/api/src/uteki_api/tools/: __init__.py  _fixtures.py  base.py  company_intel.py  financials.py  kline.py  macro_fred.py  macro_rates.py  market_quote.py  news_search.py  openbb_client.py  report_analysis.py  sec_fundamentals.py  web_extract.py  web_search.py
services/api/src/uteki_api/triggers/: __init__.py  persisted_models.py  registry.py  store.py
services/api/src/uteki_api/users/: __init__.py  models.py  password.py  store.py
services/api/tests/e2e/: README.md  conftest.py  test_01_auth_chain.py  test_02_isolation.py  test_03_research_chain.py  test_04_pipeline_chain.py  test_05_eval_chain.py  test_06_real_llm_smoke.py  test_07_mcp_chain.py  test_08_sqlite_runstore.py  test_09_proposal_store.py  test_10_company_pipeline.py  test_11_as_of_threading.py  test_12_cc_review.py  test_13_proposals_cli.py  test_14_apply.py  test_15_ab_eval.py  test_16_g2.py  test_17_drift_auto_trigger.py  test_18_cross_skill_smoke.py  test_19_run_status_reshape.py  test_20_uteki_router.py  test_21_run_feedback_chain.py  test_22_run_judge_dispatcher.py  test_23_run_feedback_review_mode.py  test_24_eval_bench_chain.py  test_25_prediction_chain.py
services/api/tests/e2e/_data/: e2e.db
services/api/tests/unit/: test_artifact_strip_preamble.py  test_as_of_tools.py  test_company_pipeline.py  test_gcs_artifact_store.py  test_postgres_compat.py  test_provenance.py  test_real_data_tools.py  test_skill_registry_concurrency.py  test_validators.py
services/openbb/: README.md  pyproject.toml
(+221 files in other folders)
