[project]
name = "uteki-api"
version = "0.0.1"
description = "uteki investment research agent — FastAPI backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "sse-starlette>=2.1",
    "anthropic>=0.45",
    "sqlmodel>=0.0.22",
    "alembic>=1.13",
    "bcrypt>=4.2",
    "pyjwt>=2.10",
    "email-validator>=2.2",
    "mcp>=1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uteki_api"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
# E501: long lines are fine.
# B008: FastAPI / Typer idiom — `def f(dep = Depends(...))` is correct here.
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "real_llm: hits a real LLM provider; skipped unless UTEKI_USE_MOCK_LLM=false and a provider key is set",
]
