[project]
name = "uteki-api"
version = "0.0.1"
description = "uteki investment research agent — FastAPI backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "sse-starlette>=2.1",
    "anthropic>=0.45",
    "sqlmodel>=0.0.22",
    "alembic>=1.13",
    "bcrypt>=4.2",
    "pyjwt>=2.10",
    "email-validator>=2.2",
    "mcp>=1.0",
    "yfinance>=0.2.30",
    "ddgs>=9.10.0",
    # Phase C.3b — web_extract uses BeautifulSoup + lxml for article
    # extraction. Already pulled transitively (via yfinance), pinned
    # here so a transitive parent bump can't silently drop them.
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[project.optional-dependencies]
# GCS-backed ArtifactStore for production Cloud Run deployment. Kept out of
# default deps so `uv sync` in dev doesn't pull 100+ GCP transitive packages.
# Install with: `uv sync --extra gcs` (or `pip install uteki-api[gcs]`).
gcs = [
    "google-cloud-storage>=2.18",
]
# Postgres driver for Cloud SQL Postgres 17 in production. The binary wheel
# (~50MB) bundles libpq so deployment hosts don't need it system-installed.
# Local dev stays on SQLite — no need to pull this in. Install with:
# `uv sync --extra postgres` (or `pip install uteki-api[postgres]`).
postgres = [
    "psycopg[binary]>=3.2",
]
# Cloud SQL Python Connector — recommended path for Cloud Run to reach
# Cloud SQL without running the auth proxy as a sidecar. Optional because
# local dev uses sockets / direct TCP.
cloudsql = [
    "cloud-sql-python-connector[psycopg]>=1.12",
]
vertex = [
    "market-utils",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uteki_api"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
# E501: long lines are fine.
# B008: FastAPI / Typer idiom — `def f(dep = Depends(...))` is correct here.
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "real_llm: hits a real LLM provider; skipped unless UTEKI_USE_MOCK_LLM=false and a provider key is set",
]

[tool.uv.sources]
market-utils = { path = "../../../market-utils", editable = true }
